FISH-1321 java.security.manager property removed